feature/DTS-47967-defects-breached-sla-kpi finish implementing the metric