@@ -20,20 +20,21 @@ import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.codehaus.plexus.util.StringUtils;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -41,13 +42,12 @@ import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.stereotype.Service;
 
-import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
-import com.publicissapient.kpidashboard.apis.config.CustomApiConfig;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.enums.Filters;
 import com.publicissapient.kpidashboard.apis.enums.JiraFeature;
 import com.publicissapient.kpidashboard.apis.enums.KPICode;
 import com.publicissapient.kpidashboard.apis.enums.KPIExcelColumn;
+import com.publicissapient.kpidashboard.apis.enums.KPISource;
 import com.publicissapient.kpidashboard.apis.errors.ApplicationException;
 import com.publicissapient.kpidashboard.apis.jira.service.JiraKPIService;
 import com.publicissapient.kpidashboard.apis.model.KPIExcelData;
@@ -59,6 +59,7 @@ import com.publicissapient.kpidashboard.apis.util.CommonUtils;
 import com.publicissapient.kpidashboard.apis.util.KPIHelperUtil;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
+import com.publicissapient.kpidashboard.common.model.application.BaseFieldMappingStructure;
 import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.DataCountGroup;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
@@ -69,40 +70,21 @@ import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
-import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Service
 @AllArgsConstructor
-public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Object>, Map<String, Object>> {
+public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Double, List<Object>, Map<String, Object>> {
 
-    private final CustomApiConfig customApiConfig;
+    private static final String TOTAL_RESOLVED_ISSUES = "totalResolvedIssues";
+    private static final String BREACHED_PERCENTAGE = "breachedPercentage";
+    private static final String SEVERITY = "severity";
 
-    private final ConfigHelperService configHelperService;
+    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSSSSSS");
 
     private final MongoTemplate mongoTemplate;
-
-    private static final List<String> TEMP_SEVERITIES = List.of("1", "2", "3", "4", "Major", "High", "Low", "Minor");
-
-    private static final Map<String, SLAData> SEVERITY_SLA_MAP = Map.of(
-            "s1", new SLAData(24, "s1", SLATimeUnit.HOURS.getTimeUnitValue()),
-            "s2", new SLAData(48, "s2", SLATimeUnit.HOURS.getTimeUnitValue()),
-            "s3", new SLAData(5, "s3", SLATimeUnit.DAYS.getTimeUnitValue()),
-            "s4", new SLAData(10, "s4", SLATimeUnit.DAYS.getTimeUnitValue())
-    );
-
-    private static final Random RANDOM = new Random();
-
-    @Getter
-    @AllArgsConstructor
-    private enum SLATimeUnit {
-        HOURS("Hours"),
-        DAYS("Days");
-
-        private final String timeUnitValue;
-    }
 
     @Data
     @Builder
@@ -121,8 +103,6 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
 
     @Data
     @Builder
-    @AllArgsConstructor
-    @NoArgsConstructor
     private static class SprintDataForKPI195 {
         private String sprintId;
         private String sprintName;
@@ -147,8 +127,6 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
 
     @Data
     @Builder
-    @NoArgsConstructor
-    @AllArgsConstructor
     private static class JiraDefectIssueDataForKPI195 {
         private String issueKey;
         private String url;
@@ -168,9 +146,8 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
 
     @Data
     @AllArgsConstructor
-    @NoArgsConstructor
-    private static class SLAData {
-        private int sla;
+    static class SLAData {
+        private double sla;
 
         private String generalSeverity;
         private String timeUnit;
@@ -182,12 +159,16 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
     }
 
     @Override
+    public Double calculateKpiValue(List<Double> valueList, String kpiName) {
+        return calculateKpiValueForDouble(valueList, kpiName);
+    }
+
+    @Override
     public KpiElement getKpiData(
             KpiRequest kpiRequest,
             KpiElement kpiElement,
             TreeAggregatorDetail treeAggregatorDetail
     ) throws ApplicationException {
-
         List<DataCount> trendValueList = new ArrayList<>();
         Node root = treeAggregatorDetail.getRoot();
 
@@ -208,20 +189,21 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
         Map<String, List<DataCount>> trendValuesMap =
                 getTrendValuesMap(kpiRequest, kpiElement, nodeWiseKPIValue, KPICode.DEFECTS_BREACHED_SLAS);
 
-        trendValuesMap = KPIHelperUtil.sortTrendMapByKeyOrder(trendValuesMap, Arrays.asList(CommonConstant.OVERALL,
-                Constant.DSE_1, Constant.DSE_2, Constant.DSE_3, Constant.DSE_4));
-        Map<String, Map<String, List<DataCount>>> issueTypeProjectWiseDc = new LinkedHashMap<>();
+        trendValuesMap = KPIHelperUtil.sortTrendMapByKeyOrder(trendValuesMap,
+                List.of(CommonConstant.OVERALL, Constant.DSE_1, Constant.DSE_2, Constant.DSE_3, Constant.DSE_4));
+
+        Map<String, Map<String, List<DataCount>>> severityTypeProjectWiseDataCount = new LinkedHashMap<>();
         trendValuesMap.forEach((issueType, dataCounts) -> {
-            Map<String, List<DataCount>> projectWiseDc = dataCounts.stream()
+            Map<String, List<DataCount>> projectWiseDataCount = dataCounts.stream()
                     .collect(Collectors.groupingBy(DataCount::getData));
-            issueTypeProjectWiseDc.put(issueType, projectWiseDc);
+            severityTypeProjectWiseDataCount.put(issueType, projectWiseDataCount);
         });
 
         List<DataCountGroup> dataCountGroups = new ArrayList<>();
-        issueTypeProjectWiseDc.forEach((issueType, projectWiseDc) -> {
+        severityTypeProjectWiseDataCount.forEach((issueType, projectWiseDataCount) -> {
             DataCountGroup dataCountGroup = new DataCountGroup();
             List<DataCount> dataList = new ArrayList<>();
-            projectWiseDc.forEach((key, value) -> dataList.addAll(value));
+            projectWiseDataCount.forEach((key, value) -> dataList.addAll(value));
             dataCountGroup.setFilter(issueType);
             dataCountGroup.setValue(dataList);
             dataCountGroups.add(dataCountGroup);
@@ -233,24 +215,281 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
     }
 
     @Override
+    public Map<String, Object> calculateHoverMap(List<Map<String, Object>> hoverMapValues) {
+        Map<String, Object> aggregatedHoverMapValues = new HashMap<>();
+        if(CollectionUtils.isNotEmpty(hoverMapValues)) {
+            int totalResolvedIssuesSum = 0;
+            int breachedPercentagesCount = 0;
+            double breachedPercentagesSum = 0.0;
+
+            for(Map<String, Object> hoverMapValue : hoverMapValues) {
+                if(Objects.nonNull(hoverMapValue)) {
+                    totalResolvedIssuesSum += (int) hoverMapValue.get(TOTAL_RESOLVED_ISSUES);
+                    breachedPercentagesSum += (double) hoverMapValue.get(BREACHED_PERCENTAGE);
+                    breachedPercentagesCount++;
+                }
+            }
+            aggregatedHoverMapValues.put(TOTAL_RESOLVED_ISSUES, totalResolvedIssuesSum);
+            if(breachedPercentagesCount == 0.0) {
+                aggregatedHoverMapValues.put(BREACHED_PERCENTAGE, 0.0d);
+            } else {
+                aggregatedHoverMapValues.put(BREACHED_PERCENTAGE, Math.floor(breachedPercentagesSum / breachedPercentagesCount));
+            }
+        }
+        return aggregatedHoverMapValues;
+    }
+
+    @Override
+    public Object calculateDrillDownValue(List<Object> drillDownValues) {
+        List<SeverityJiraDefectDrillDownValue> aggregatedSeverityJiraDefectDrillDownValueList = new ArrayList<>();
+        if(CollectionUtils.isNotEmpty(drillDownValues)) {
+               Map<String, List<Double>> severityIssuesBreachedPercentagesAcrossAllProjects = new HashMap<>();
+               for(Object projectOverallDrillDownValue : drillDownValues) {
+                   if(Objects.nonNull(projectOverallDrillDownValue)) {
+                       for (SeverityJiraDefectDrillDownValue severityJiraDefectDrillDownValue :
+                               (List<SeverityJiraDefectDrillDownValue>) projectOverallDrillDownValue) {
+                           severityIssuesBreachedPercentagesAcrossAllProjects.computeIfAbsent(
+                                   severityJiraDefectDrillDownValue.getSeverity(), k ->  new ArrayList<>());
+                           severityIssuesBreachedPercentagesAcrossAllProjects.get(severityJiraDefectDrillDownValue.getSeverity()).add(severityJiraDefectDrillDownValue.getBreachedPercentage());
+                       }
+                   }
+               }
+               if(MapUtils.isNotEmpty(severityIssuesBreachedPercentagesAcrossAllProjects)) {
+                   severityIssuesBreachedPercentagesAcrossAllProjects.keySet()
+                           .forEach(severity -> {
+                               double averageBreachedPercentage = 0.0d;
+                               if(severityIssuesBreachedPercentagesAcrossAllProjects.get(severity).isEmpty()) {
+                                   aggregatedSeverityJiraDefectDrillDownValueList.add(new SeverityJiraDefectDrillDownValue(severity, averageBreachedPercentage));
+                               } else {
+                                   double breachedPercentageSum =
+                                           severityIssuesBreachedPercentagesAcrossAllProjects.get(severity).stream().mapToDouble(Double::doubleValue).sum();
+                                   int breachedPercentagesCount =
+                                           severityIssuesBreachedPercentagesAcrossAllProjects.get(severity).size();
+                                   aggregatedSeverityJiraDefectDrillDownValueList.add(
+                                           new SeverityJiraDefectDrillDownValue(severity,
+												   Math.floor(breachedPercentageSum / breachedPercentagesCount))
+                                   );
+                               }
+                           });
+               }
+        }
+        return aggregatedSeverityJiraDefectDrillDownValueList;
+    }
+
+    @Override
     public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate, KpiRequest kpiRequest) {
 		return Collections.emptyMap();
     }
 
     @Override
-    public Long calculateKPIMetrics(Map<String, Object> stringObjectMap) {
-        return 0L;
+    public Double calculateKPIMetrics(Map<String, Object> stringObjectMap) {
+        return 0.0d;
     }
 
     private List<DefectsBreachedSLAsKPIData> constructKPIData(
-            List<Node> sprintLeafNodesList, KpiRequest kpiRequest
+            List<Node> sprintLeafNodesList
+    ) {
+        List<DefectsBreachedSLAsKPIData> defectsBreachedSLAsKPIDataList =
+                constructProjectsAndSprintsDataFromSprintLeafNodeList(sprintLeafNodesList);
+
+        defectsBreachedSLAsKPIDataList.forEach(defectsBreachedSLAsKPIData -> {
+            FieldMapping fieldMapping = defectsBreachedSLAsKPIData.getProjectKPISettingsFieldMapping();
+            if(projectDoesNotContainRequiredKPISettings(fieldMapping)) {
+                return;
+            }
+            Query jiraIssuesQuery =
+                    constructJiraIssuesQueryApplyingAllKPISettingFilters(defectsBreachedSLAsKPIData, fieldMapping);
+            if(Objects.nonNull(jiraIssuesQuery)) {
+                List<JiraIssue> jiraIssuesAfterApplyingAllFilters = mongoTemplate.find(jiraIssuesQuery, JiraIssue.class);
+
+                if(CollectionUtils.isNotEmpty(jiraIssuesAfterApplyingAllFilters)) {
+                    Query jiraIssueCustomHistoryQuery =
+                            constructJiraIssueCustomHistoryQueryFromBasicProjectConfigIdAndFilteredJiraIssues(
+                                    defectsBreachedSLAsKPIData.getBasicProjectConfigId(), jiraIssuesAfterApplyingAllFilters);
+                    if(Objects.nonNull(jiraIssueCustomHistoryQuery)) {
+                        List<JiraIssueCustomHistory> jiraIssueCustomHistoryList =
+                                mongoTemplate.find(jiraIssueCustomHistoryQuery, JiraIssueCustomHistory.class);
+
+                        if(CollectionUtils.isNotEmpty(jiraIssueCustomHistoryList)) {
+                            populateSprintJiraDefectsDataForProject(
+                                    defectsBreachedSLAsKPIData,
+                                    jiraIssueCustomHistoryList,
+                                    jiraIssuesAfterApplyingAllFilters
+                            );
+                        }
+                    }
+                }
+            }
+        });
+        return defectsBreachedSLAsKPIDataList;
+    }
+
+    private void calculateDefectsBreachSLAsForSprints(
+            Map<String, Node> nodeIdMap,
+            List<Node> sprintLeafNodes,
+            List<DataCount> trendValueList,
+            KpiElement kpiElement,
+            KpiRequest kpiRequest
+    ) {
+        List<DefectsBreachedSLAsKPIData> kpiDataFromDatabase = constructKPIData(sprintLeafNodes);
+
+        if(CollectionUtils.isNotEmpty(kpiDataFromDatabase)) {
+            List<KPIExcelData> kpiExcelDataList = new ArrayList<>();
+            Set<String> severitiesFoundAcrossAllProjects = new HashSet<>();
+
+            kpiDataFromDatabase.forEach(defectsBreachedSLAsKPIData -> {
+                if(CollectionUtils.isNotEmpty(defectsBreachedSLAsKPIData.getSeveritiesFoundAcrossSprintIssues())) {
+                    severitiesFoundAcrossAllProjects.addAll(defectsBreachedSLAsKPIData.getSeveritiesFoundAcrossSprintIssues());
+                }
+            });
+
+            if(CollectionUtils.isNotEmpty(severitiesFoundAcrossAllProjects)) {
+                kpiDataFromDatabase.forEach(defectsBreachedSLAsKPIData -> {
+                    List<SprintDataForKPI195> sprintDataForKPI195List =
+                            defectsBreachedSLAsKPIData.getSprintDataForKPI195List();
+                    sprintDataForKPI195List.forEach(sprintDataForKPI195 ->
+                            populateDataCountWithKPICalculatedValueForASprint(
+                                    defectsBreachedSLAsKPIData,
+                                    nodeIdMap,
+                                    severitiesFoundAcrossAllProjects,
+                                    sprintDataForKPI195,
+                                    trendValueList,
+                                    kpiExcelDataList,
+                                    kpiRequest
+                            )
+                    );
+                });
+                kpiElement.setExcelData(kpiExcelDataList);
+                kpiElement.setExcelColumns(KPIExcelColumn.DEFECTS_BREACHED_SLAS.getColumns());
+            }
+        }
+    }
+
+    private Map<String, SeverityJiraIssuesDefectsBreachedSLAData> constructSeverityByJiraIssueDefectsDataMap(
+            SprintDataForKPI195 sprintDataForKPI195,
+            KpiRequest kpiRequest,
+            List<KPIExcelData> kpiExcelDataList
+    ) {
+        Map<String, SeverityJiraIssuesDefectsBreachedSLAData> severityByJiraIssueDefectsData = new HashMap<>();
+        sprintDataForKPI195.getJiraDefectIssueDataForKPI195List().forEach(jiraDefectIssueDataForKPI195 -> {
+            severityByJiraIssueDefectsData.putIfAbsent(jiraDefectIssueDataForKPI195.getSlaData().getGeneralSeverity(),
+                    new SeverityJiraIssuesDefectsBreachedSLAData());
+            SeverityJiraIssuesDefectsBreachedSLAData severityJiraIssuesDefectsBreachedSLAData =
+                    severityByJiraIssueDefectsData.get(jiraDefectIssueDataForKPI195.getSlaData().getGeneralSeverity());
+            severityJiraIssuesDefectsBreachedSLAData.setSolvedIssues(severityJiraIssuesDefectsBreachedSLAData.getSolvedIssues() + 1);
+            boolean defectBreachedSLA = defectBreachedSLA(jiraDefectIssueDataForKPI195);
+            if(defectBreachedSLA) {
+                severityJiraIssuesDefectsBreachedSLAData.setBreachedIssues(
+                        severityJiraIssuesDefectsBreachedSLAData.getBreachedIssues() + 1);
+            }
+            if (kpiRequest.getRequestTrackerId().toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
+                String breachedSlaFlagString = defectBreachedSLA ? "Y" : "N";
+                populateKPIExcelDataByJiraDefectIssueAndBreachedSlaFlag(
+                        kpiExcelDataList,
+                        sprintDataForKPI195.getSprintName(),
+                        jiraDefectIssueDataForKPI195,
+                        breachedSlaFlagString
+                );
+            }
+        });
+        return severityByJiraIssueDefectsData;
+    }
+
+    private void populateDataCountWithKPICalculatedValueForASprint(
+            DefectsBreachedSLAsKPIData defectsBreachedSLAsKPIData,
+            Map<String, Node> nodeIdMap,
+            Set<String> severitiesFoundAcrossAllProjects,
+            SprintDataForKPI195 sprintDataForKPI195,
+            List<DataCount> trendValueList,
+            List<KPIExcelData> kpiExcelDataList,
+            KpiRequest kpiRequest
+    ) {
+        if(CollectionUtils.isEmpty(defectsBreachedSLAsKPIData.getSeveritiesFoundAcrossSprintIssues())) {
+            return;
+        }
+        Map<String, List<DataCount>> severityDataCountMap = new HashMap<>();
+        Map<String, SeverityJiraIssuesDefectsBreachedSLAData> severityByJiraIssueDefectsData =
+                constructSeverityByJiraIssueDefectsDataMap(sprintDataForKPI195, kpiRequest, kpiExcelDataList);
+
+        List<SeverityJiraDefectDrillDownValue> severityJiraDefectDrillDownValueList = new ArrayList<>();
+
+        int totalResolvedDefects = 0;
+        int totalBreachedDefects = 0;
+
+        for(String severity : severitiesFoundAcrossAllProjects) {
+            String capitalisedSeverity = StringUtils.capitalise(severity);
+            DataCount.DataCountBuilder dataCountBuilder = DataCount.builder()
+                    .sProjectName(defectsBreachedSLAsKPIData.getProjectName())
+                    .sSprintID(sprintDataForKPI195.getSprintId())
+                    .sSprintName(sprintDataForKPI195.getSprintName())
+                    .kpiGroup(capitalisedSeverity);
+
+            double defectsBreachedSLAForSeverity = 0.0d;
+            Map<String, Object> hoverValueMap = new HashMap<>();
+            if(severityByJiraIssueDefectsData.containsKey(capitalisedSeverity.toLowerCase())) {
+                SeverityJiraIssuesDefectsBreachedSLAData severityJiraIssuesDefectsBreachedSLAData =
+                        severityByJiraIssueDefectsData.get(severity);
+
+                if(severityJiraIssuesDefectsBreachedSLAData.solvedIssues > 0) {
+                    defectsBreachedSLAForSeverity = Math.floor((severityJiraIssuesDefectsBreachedSLAData.breachedIssues / (double) severityJiraIssuesDefectsBreachedSLAData.solvedIssues) * 100);
+                }
+                severityJiraDefectDrillDownValueList.add(new SeverityJiraDefectDrillDownValue(severity, defectsBreachedSLAForSeverity));
+                totalResolvedDefects += severityJiraIssuesDefectsBreachedSLAData.solvedIssues;
+                totalBreachedDefects += severityJiraIssuesDefectsBreachedSLAData.breachedIssues;
+
+                hoverValueMap.put(TOTAL_RESOLVED_ISSUES, severityJiraIssuesDefectsBreachedSLAData.solvedIssues);
+                hoverValueMap.put(BREACHED_PERCENTAGE, defectsBreachedSLAForSeverity);
+            }
+            dataCountBuilder
+                    .data(String.valueOf(defectsBreachedSLAForSeverity))
+                    .hoverValue(hoverValueMap)
+                    .value(defectsBreachedSLAForSeverity);
+            severityDataCountMap.computeIfAbsent(capitalisedSeverity, k -> new ArrayList<>());
+            severityDataCountMap.get(capitalisedSeverity).add(dataCountBuilder.build());
+            trendValueList.add(dataCountBuilder.build());
+        }
+
+        Map<String, Object> hoverValueMap = new HashMap<>();
+        double defectsBreachedSLAForSprint = 0.0;
+
+        if(totalResolvedDefects > 0) {
+            defectsBreachedSLAForSprint =
+                    Math.floor((totalBreachedDefects / (double) totalResolvedDefects) * 100);
+        }
+
+        hoverValueMap.put(TOTAL_RESOLVED_ISSUES, totalBreachedDefects);
+        hoverValueMap.put(BREACHED_PERCENTAGE, defectsBreachedSLAForSprint);
+
+        String overallFilter = CommonConstant.OVERALL;
+
+        DataCount dataCount = DataCount.builder()
+                .data(String.valueOf(defectsBreachedSLAForSprint))
+                .sProjectName(defectsBreachedSLAsKPIData.getProjectName())
+                .sSprintID(sprintDataForKPI195.getSprintId())
+                .sSprintName(sprintDataForKPI195.getSprintName())
+                .hoverValue(hoverValueMap)
+                .value(defectsBreachedSLAForSprint)
+                .drillDown(severityJiraDefectDrillDownValueList)
+                .kpiGroup(overallFilter)
+                .build();
+
+        severityDataCountMap.computeIfAbsent(overallFilter, k -> new ArrayList<>());
+        severityDataCountMap.get(overallFilter).add(dataCount);
+        trendValueList.add(dataCount);
+        nodeIdMap.get(sprintDataForKPI195.getSprintNodeId()).setValue(severityDataCountMap);
+    }
+
+    private List<DefectsBreachedSLAsKPIData> constructProjectsAndSprintsDataFromSprintLeafNodeList(
+            List<Node> sprintLeafNodeList
     ) {
         List<DefectsBreachedSLAsKPIData> defectsBreachedSLAsKPIDataList = new ArrayList<>();
-
+        if(CollectionUtils.isEmpty(sprintLeafNodeList)) {
+            return defectsBreachedSLAsKPIDataList;
+        }
         // Sort the sprints by start date in ascending order
-        sprintLeafNodesList.sort(Comparator.comparing(node -> node.getSprintFilter().getStartDate()));
+        sprintLeafNodeList.sort(Comparator.comparing(node -> node.getSprintFilter().getStartDate()));
 
-        sprintLeafNodesList.forEach(sprintLeafNode -> {
+        sprintLeafNodeList.forEach(sprintLeafNode -> {
             String basicProjectConfigStringId = sprintLeafNode.getProjectFilter().getBasicProjectConfigId().toString();
             String sprintId = sprintLeafNode.getSprintFilter().getId();
             String sprintNodeId = sprintLeafNode.getId();
@@ -267,19 +506,20 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
                         .stream().filter(sprintDataForKPI195 -> sprintId.equals(sprintDataForKPI195.getSprintId())).findFirst();
 
                 if(sprintDataForKPI195Optional.isEmpty()) {
-                    defectsBreachedSLAsKPIData.getSprintDataForKPI195List().add(SprintDataForKPI195.builder()
-                            .sprintId(sprintId)
-                            .sprintName(sprintLeafNode.getSprintFilter().getName())
-                            .sprintNodeId(sprintNodeId)
-                            .jiraDefectIssueDataForKPI195List(new ArrayList<>())
-                            .build());
+                    defectsBreachedSLAsKPIData.getSprintDataForKPI195List()
+                            .add(SprintDataForKPI195.builder()
+                                    .sprintId(sprintId)
+                                    .sprintName(sprintLeafNode.getSprintFilter().getName())
+                                    .sprintNodeId(sprintNodeId)
+                                    .jiraDefectIssueDataForKPI195List(new ArrayList<>())
+                                    .build());
                 }
             } else {
                 DefectsBreachedSLAsKPIData.DefectsBreachedSLAsKPIDataBuilder defectsBreachedSLAsKPIDataBuilder =
                         DefectsBreachedSLAsKPIData.builder()
                                 .basicProjectConfigId(basicProjectConfigStringId)
                                 .projectName(sprintLeafNode.getProjectFilter().getName())
-                                .projectKPISettingsFieldMapping(configHelperService.getFieldMappingMap()
+                                .projectKPISettingsFieldMapping(getConfigHelperService().getFieldMappingMap()
                                         .get(sprintLeafNode.getProjectFilter().getBasicProjectConfigId())
                                 );
 
@@ -294,244 +534,148 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
                 defectsBreachedSLAsKPIDataList.add(defectsBreachedSLAsKPIDataBuilder.build());
             }
         });
-
-        defectsBreachedSLAsKPIDataList.forEach(defectsBreachedSLAsKPIData -> {
-            String basicProjectConfigId = defectsBreachedSLAsKPIData.getBasicProjectConfigId();
-            Set<String> sprintIdsSet = defectsBreachedSLAsKPIData.getSprintDataForKPI195List().stream().map(SprintDataForKPI195::getSprintId).collect(Collectors.toSet());
-            FieldMapping fieldMapping = defectsBreachedSLAsKPIData.getProjectKPISettingsFieldMapping();
-            // Extracting all issues based on the remaining KPI setting filters and the issue numbers extracted in
-            // the previous step
-                Criteria criteria = new Criteria();
-                criteria = criteria.and(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature()).is(basicProjectConfigId)
-                        .and(JiraFeature.SPRINT_ID.getFieldValueInFeature()).in(sprintIdsSet)
-                        .and(JiraFeature.ISSUE_TYPE.getFieldValueInFeature()).is(NormalizedJira.DEFECT_TYPE.getValue())
-                        .and(JiraFeature.STATUS.getFieldValueInFeature()).in(CommonUtils.convertToPatternList(fieldMapping.getIncludedDefectClosureStatusesKPI195()));
-                if(CollectionUtils.isNotEmpty(fieldMapping.getExcludedDefectPrioritiesKPI195())) {
-                    criteria = criteria.and(JiraFeature.DEFECT_PRIORITY.getFieldValueInFeature()).nin(CommonUtils.convertToPatternList(fieldMapping.getExcludedDefectPrioritiesKPI195()));
-                }
-                if(CollectionUtils.isNotEmpty(fieldMapping.getExcludedDefectResolutionTypesKPI195())) {
-                    criteria = criteria.and("resolution")
-                            .nin(CommonUtils.convertToPatternList(fieldMapping.getExcludedDefectResolutionTypesKPI195()));
-                }
-                if(CollectionUtils.isNotEmpty(fieldMapping.getIncludedDefectRootCausesKPI195())) {
-                    criteria = criteria.and("rootCauseList")
-                            .in(CommonUtils.convertToPatternList(fieldMapping.getIncludedDefectRootCausesKPI195()));
-                }
-                List<JiraIssue> issuesAfterApplyingAllFilters = mongoTemplate.find(new Query(criteria), JiraIssue.class);
-
-                if(CollectionUtils.isNotEmpty(issuesAfterApplyingAllFilters)) {
-                    Criteria criteria3 = new Criteria();
-                    criteria3 =
-                            criteria3.and(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature()).is(basicProjectConfigId)
-                                    .and("storyID").in(issuesAfterApplyingAllFilters.stream().map(JiraIssue::getNumber).collect(Collectors.toSet()));
-                    List<JiraIssueCustomHistory> jiraIssueCustomHistoryList = mongoTemplate.find(new Query(criteria3), JiraIssueCustomHistory.class);
-
-                    if(CollectionUtils.isNotEmpty(jiraIssueCustomHistoryList)) {
-                        jiraIssueCustomHistoryList.forEach(jiraIssueCustomHistory -> {
-                            List<JiraHistoryChangeLog> statusUpdateChangelog =
-                                    jiraIssueCustomHistory.getStatusUpdationLog();
-                            statusUpdateChangelog.sort(Comparator.comparing(JiraHistoryChangeLog::getUpdatedOn));
-                            JiraHistoryChangeLog lastStatusUpdate =
-                                    statusUpdateChangelog.get(statusUpdateChangelog.size() - 1);
-
-                            if(fieldMapping.getIncludedDefectClosureStatusesKPI195()
-                                    .stream()
-                                    .anyMatch(status -> status.equalsIgnoreCase(lastStatusUpdate.getChangedTo()))
-                            ) {
-                                Optional<JiraIssue> jiraIssueOptional = issuesAfterApplyingAllFilters.stream()
-                                        .filter(jiraIssue1 -> jiraIssue1.getNumber()
-                                                .equalsIgnoreCase(jiraIssueCustomHistory.getStoryID()))
-                                        .findFirst();
-                                if(jiraIssueOptional.isPresent()) {
-                                    JiraIssue jiraIssue = jiraIssueOptional.get();
-                                    JiraDefectIssueDataForKPI195.JiraDefectIssueDataForKPI195Builder jiraDefectIssueDataForKPI195Builder =
-                                            JiraDefectIssueDataForKPI195.builder()
-                                                    .issueKey(jiraIssueCustomHistory.getStoryID())
-                                                    .closedDate(lastStatusUpdate.getUpdatedOn())
-                                                    .issueIdsDefectRelatesTo(jiraIssue.getDefectStoryID())
-                                                    .timeSpentInHours(String.valueOf(Math.floor(jiraIssue.getTimeSpentInMinutes() / 60.0)));
-
-                                    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSSSSSS");
-                                    LocalDateTime dateTime = LocalDateTime.parse(jiraIssue.getCreatedDate(), formatter);
-                                    jiraDefectIssueDataForKPI195Builder.createdDate(dateTime)
-                                            .url(jiraIssue.getUrl())
-                                            .priority(jiraIssue.getPriority())
-                                            .status(jiraIssue.getStatus());
-
-                                    String issueSeverity = TEMP_SEVERITIES.get(RANDOM.nextInt(0, TEMP_SEVERITIES.size()));
-
-                                    jiraDefectIssueDataForKPI195Builder.severity(issueSeverity)
-                                            .slaData(determineDefectSLABasedOnSeverity(issueSeverity));
-
-                                    Optional<SprintDataForKPI195> sprintDataForKPI195Optional =
-                                            defectsBreachedSLAsKPIData.getSprintDataForKPI195List()
-                                                    .stream()
-                                                    .filter(sprintDataForKPI195 -> sprintDataForKPI195.getSprintId().equals(jiraIssue.getSprintID()))
-                                                    .findFirst();
-                                    sprintDataForKPI195Optional.ifPresent(sprintDataForKPI195 ->
-                                            sprintDataForKPI195.getJiraDefectIssueDataForKPI195List().add(jiraDefectIssueDataForKPI195Builder.build())
-                                    );
-                                }
-                            }
-                        });
-                    }
-                }
-        });
         return defectsBreachedSLAsKPIDataList;
     }
 
-    private void calculateDefectsBreachSLAsForSprints(
-            Map<String, Node> nodeIdMap,
-            List<Node> sprintLeafNodes,
-            List<DataCount> trendValueList,
-            KpiElement kpiElement,
-            KpiRequest kpiRequest
+    private Query constructJiraIssuesQueryApplyingAllKPISettingFilters(
+            DefectsBreachedSLAsKPIData defectsBreachedSLAsKPIData,
+            FieldMapping fieldMapping
     ) {
-        List<DefectsBreachedSLAsKPIData> kpiDataFromDatabase = constructKPIData(sprintLeafNodes, kpiRequest);
-
-        if(CollectionUtils.isNotEmpty(kpiDataFromDatabase)) {
-            List<KPIExcelData> kpiExcelDataList = new ArrayList<>();
-            kpiDataFromDatabase.forEach(defectsBreachedSLAsKPIData -> {
-                List<SprintDataForKPI195> sprintDataForKPI195List =
-                        defectsBreachedSLAsKPIData.getSprintDataForKPI195List();
-                sprintDataForKPI195List.forEach(sprintDataForKPI195 ->
-                        populateDataCountWithKPICalculatedValueForASprint(
-                                nodeIdMap,
-                                defectsBreachedSLAsKPIData.getProjectName(),
-                                sprintDataForKPI195,
-                                trendValueList,
-                                kpiExcelDataList
-                        )
-                );
-            });
-            kpiElement.setExcelData(kpiExcelDataList);
-            kpiElement.setExcelColumns(KPIExcelColumn.DEFECTS_BREACHED_SLAS.getColumns());
+        if(Objects.isNull(defectsBreachedSLAsKPIData) || Objects.isNull(fieldMapping)) {
+            return null;
         }
-    }
+        String basicProjectConfigId = defectsBreachedSLAsKPIData.getBasicProjectConfigId();
+        Set<String> sprintIdsSet = defectsBreachedSLAsKPIData.getSprintDataForKPI195List()
+                .stream()
+                .map(SprintDataForKPI195::getSprintId)
+                .collect(Collectors.toSet());
 
-    private void populateDataCountWithKPICalculatedValueForASprint(
-            Map<String, Node> nodeIdMap,
-            String projectName,
-            SprintDataForKPI195 sprintDataForKPI195,
-            List<DataCount> trendValueList,
-            List<KPIExcelData> kpiExcelDataList
-    ) {
-        Map<String, List<DataCount>> severityDataCountMap = new HashMap<>();
-        Map<String, SeverityJiraIssuesDefectsBreachedSLAData> severityByJiraIssueDefectsData = new HashMap<>();
-        sprintDataForKPI195.getJiraDefectIssueDataForKPI195List().forEach(jiraDefectIssueDataForKPI195 -> {
-            Map<String, String> jiraIssueIdAndUrlDefectRelatesToMap = new HashMap<>();
-            if(StringUtils.isNotEmpty(jiraDefectIssueDataForKPI195.getUrl()) &&
-                    CollectionUtils.isNotEmpty(jiraDefectIssueDataForKPI195.getIssueIdsDefectRelatesTo())) {
-                String jiraDefectUrl = jiraDefectIssueDataForKPI195.getUrl();
-                jiraDefectIssueDataForKPI195.getIssueIdsDefectRelatesTo()
-                        .forEach(issueId ->
-                                jiraIssueIdAndUrlDefectRelatesToMap.put(
-                                        issueId,
-                                        String.format("%s%s", jiraDefectUrl.substring(0, jiraDefectUrl.lastIndexOf("/") + 1), issueId)
-                                )
-                        );
-            }
-
-            KPIExcelData.KPIExcelDataBuilder kpiExcelDataBuilder = KPIExcelData.builder()
-                    .sprintName(sprintDataForKPI195.getSprintName())
-                    .defectId(Map.of(jiraDefectIssueDataForKPI195.getIssueKey(), jiraDefectIssueDataForKPI195.getUrl()))
-                    .storyId(jiraIssueIdAndUrlDefectRelatesToMap)
-                    .defectPriority(jiraDefectIssueDataForKPI195.getPriority())
-                    .defectSeverity(jiraDefectIssueDataForKPI195.getSeverity())
-                    .defectStatus(jiraDefectIssueDataForKPI195.getStatus())
-                    .totalTimeSpent(jiraDefectIssueDataForKPI195.getTimeSpentInHours())
-                    .defectSLA(String.format("%s %s", jiraDefectIssueDataForKPI195.getSlaData().getSla(),
-                            jiraDefectIssueDataForKPI195.getSlaData().getTimeUnit()));
-            Duration resolutionTime = calculateResolutionTimeForDefect(jiraDefectIssueDataForKPI195);
-            long totalSeconds = resolutionTime.getSeconds();
-            kpiExcelDataBuilder.resolutionTime(
-                    String.format("%d days %d hours %d minutes",
-                            (totalSeconds / (24 * 3600)),
-                            ((totalSeconds / (24 * 3600)) / 3600),
-                            ((totalSeconds % 3600) / 60))
-            );
-            severityByJiraIssueDefectsData.putIfAbsent(jiraDefectIssueDataForKPI195.getSlaData().getGeneralSeverity(),
-                    new SeverityJiraIssuesDefectsBreachedSLAData());
-            SeverityJiraIssuesDefectsBreachedSLAData severityJiraIssuesDefectsBreachedSLAData =
-                    severityByJiraIssueDefectsData.get(jiraDefectIssueDataForKPI195.getSlaData().getGeneralSeverity());
-            severityJiraIssuesDefectsBreachedSLAData.setSolvedIssues(severityJiraIssuesDefectsBreachedSLAData.getSolvedIssues() + 1);
-
-            if(defectBreachedSLA(jiraDefectIssueDataForKPI195)) {
-                severityJiraIssuesDefectsBreachedSLAData.setBreachedIssues(severityJiraIssuesDefectsBreachedSLAData.getBreachedIssues() + 1);
-                kpiExcelDataBuilder.slaBreached("Y");
-            } else {
-                kpiExcelDataBuilder.slaBreached("N");
-            }
-            kpiExcelDataList.add(kpiExcelDataBuilder.build());
+        Map<String, List<String>> severityGeneralValuesMap = getCustomApiConfig().getSeverity();
+        List<String> generalSeverityValuesBasedOnIncludedSeveritiesList = new ArrayList<>();
+        fieldMapping.getIncludedSeveritySlasKPI195().forEach(severitySlaOption -> {
+              Map<String, Object> severitySlaStructuredValue = (Map<String, Object>) severitySlaOption.getStructuredValue();
+              String severityValueInLowerCase = ((String) severitySlaStructuredValue.get(SEVERITY)).toLowerCase();
+              if(severityGeneralValuesMap.containsKey(severityValueInLowerCase)) {
+                  generalSeverityValuesBasedOnIncludedSeveritiesList.addAll(severityGeneralValuesMap.get(severityValueInLowerCase));
+              }
         });
 
-        int totalResolvedDefects = 0;
-        int totalBreachedDefects = 0;
+        Criteria criteria = new Criteria();
+        criteria = criteria.and(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature()).is(basicProjectConfigId)
+                .and(JiraFeature.SPRINT_ID.getFieldValueInFeature()).in(sprintIdsSet)
+                .and(JiraFeature.ISSUE_TYPE.getFieldValueInFeature()).is(NormalizedJira.DEFECT_TYPE.getValue())
+                .and(JiraFeature.STATUS.getFieldValueInFeature()).in(
+                        CommonUtils.convertToPatternList(fieldMapping.getIncludedDefectClosureStatusesKPI195()))
+                .and(SEVERITY).in(CommonUtils.convertToPatternList(generalSeverityValuesBasedOnIncludedSeveritiesList));
 
-        List<SeverityJiraDefectDrillDownValue> severityJiraDefectDrillDownValueList = new ArrayList<>();
-
-        severityDataCountMap.computeIfAbsent(CommonConstant.OVERALL, k -> new ArrayList<>());
-
-        for(Map.Entry<String, List<String>> entry : customApiConfig.getSeverity().entrySet()) {
-            if(severityByJiraIssueDefectsData.containsKey(entry.getKey().toLowerCase())) {
-                SeverityJiraIssuesDefectsBreachedSLAData severityJiraIssuesDefectsBreachedSLAData =
-                        severityByJiraIssueDefectsData.get(entry.getKey());
-                double defectsBreachedSLAForSeverity =
-                        Math.floor((severityJiraIssuesDefectsBreachedSLAData.breachedIssues / (double) severityJiraIssuesDefectsBreachedSLAData.solvedIssues) * 100);
-                severityJiraDefectDrillDownValueList.add(new SeverityJiraDefectDrillDownValue(entry.getKey(), defectsBreachedSLAForSeverity));
-                totalResolvedDefects += severityJiraIssuesDefectsBreachedSLAData.solvedIssues;
-                totalBreachedDefects += severityJiraIssuesDefectsBreachedSLAData.breachedIssues;
-
-                Map<String, Object> hoverValueMap = new HashMap<>();
-                hoverValueMap.put("totalResolvedIssues", severityJiraIssuesDefectsBreachedSLAData.solvedIssues);
-                hoverValueMap.put("breachedPercentage", defectsBreachedSLAForSeverity);
-
-                DataCount dataCount = DataCount.builder()
-                        .data(String.valueOf(defectsBreachedSLAForSeverity))
-                        .sProjectName(projectName)
-                        .sSprintID(sprintDataForKPI195.getSprintId())
-                        .sSprintName(sprintDataForKPI195.getSprintName())
-                        .hoverValue(hoverValueMap)
-                        .value(defectsBreachedSLAForSeverity)
-                        .kpiGroup(StringUtils.capitalise(entry.getKey()))
-                        .build();
-                severityDataCountMap.computeIfAbsent(StringUtils.capitalise(entry.getKey()), k -> new ArrayList<>());
-                severityDataCountMap.get(StringUtils.capitalise(entry.getKey())).add(dataCount);
-                trendValueList.add(dataCount);
-            } else {
-                DataCount dataCount = DataCount.builder()
-                        .data("0.0")
-                        .sProjectName(projectName)
-                        .sSprintID(sprintDataForKPI195.getSprintId())
-                        .sSprintName(sprintDataForKPI195.getSprintName())
-                        .value(0.0)
-                        .kpiGroup(StringUtils.capitalise(entry.getKey()))
-                        .build();
-                severityDataCountMap.computeIfAbsent(StringUtils.capitalise(entry.getKey()), k -> new ArrayList<>());
-                severityDataCountMap.get(StringUtils.capitalise(entry.getKey())).add(dataCount);
-                trendValueList.add(dataCount);
-            }
+        if(CollectionUtils.isNotEmpty(fieldMapping.getExcludedDefectPrioritiesKPI195())) {
+            Map<String, List<String>> priorityGeneralValuesMap = getCustomApiConfig().getPriority();
+            List<String> generalPriorityValuesBasedOnExcludedPriorityList = new ArrayList<>();
+            fieldMapping.getExcludedDefectPrioritiesKPI195().forEach(priority -> {
+                if(priorityGeneralValuesMap.containsKey(priority.toLowerCase())) {
+                    generalPriorityValuesBasedOnExcludedPriorityList.addAll(priorityGeneralValuesMap.get(priority.toLowerCase()));
+                }
+            });
+            criteria = criteria.and(JiraFeature.DEFECT_PRIORITY.getFieldValueInFeature())
+                    .nin(CommonUtils.convertToPatternList(generalPriorityValuesBasedOnExcludedPriorityList));
         }
+        if(CollectionUtils.isNotEmpty(fieldMapping.getExcludedDefectResolutionTypesKPI195())) {
+            criteria = criteria.and("resolution")
+                    .nin(CommonUtils.convertToPatternList(fieldMapping.getExcludedDefectResolutionTypesKPI195()));
+        }
+        if(CollectionUtils.isNotEmpty(fieldMapping.getIncludedDefectRootCausesKPI195())) {
+            criteria = criteria.and("rootCauseList")
+                    .in(CommonUtils.convertToPatternList(fieldMapping.getIncludedDefectRootCausesKPI195()));
+        }
+        return new Query(criteria);
+    }
 
-        Map<String, Object> hoverValueMap = new HashMap<>();
-        double defectsBreachedSLAForSprint =
-                Math.floor((totalBreachedDefects / (double) totalResolvedDefects) * 100);
+    private Query constructJiraIssueCustomHistoryQueryFromBasicProjectConfigIdAndFilteredJiraIssues(
+            String basicProjectConfigId, List<JiraIssue> jiraIssues
+    ) {
+        if(StringUtils.isEmpty(basicProjectConfigId) || CollectionUtils.isEmpty(jiraIssues)) {
+            return null;
+        }
+        Criteria jiraIssueCustomHistoryCriteria = new Criteria();
+        jiraIssueCustomHistoryCriteria =
+                jiraIssueCustomHistoryCriteria.and(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature())
+                        .is(basicProjectConfigId)
+                        .and("storyID")
+                        .in(jiraIssues.stream()
+                                .map(JiraIssue::getNumber)
+                                .collect(Collectors.toSet()));
+        return new Query(jiraIssueCustomHistoryCriteria);
+    }
 
-        hoverValueMap.put("totalResolvedIssues", totalBreachedDefects);
-        hoverValueMap.put("breachedPercentage", defectsBreachedSLAForSprint);
+    private void populateSprintJiraDefectsDataForProject(
+            DefectsBreachedSLAsKPIData defectsBreachedSLAsKPIData,
+            List<JiraIssueCustomHistory> jiraIssueCustomHistoryList,
+            List<JiraIssue> jiraIssuesAfterApplyingAllKPISettingFilters
+    ) {
+        Set<String> severitiesFoundAcrossProject = new HashSet<>();
+        jiraIssueCustomHistoryList.forEach(jiraIssueCustomHistory -> {
+            List<JiraHistoryChangeLog> statusUpdateChangelog =
+                    jiraIssueCustomHistory.getStatusUpdationLog();
+            statusUpdateChangelog.sort(Comparator.comparing(JiraHistoryChangeLog::getUpdatedOn));
+            JiraHistoryChangeLog lastStatusUpdate =
+                    statusUpdateChangelog.get(statusUpdateChangelog.size() - 1);
 
-        DataCount dataCount = DataCount.builder()
-                .sProjectName(projectName)
-                .sSprintID(sprintDataForKPI195.getSprintId())
-                .sSprintName(sprintDataForKPI195.getSprintName())
-                .hoverValue(hoverValueMap)
-                .value(defectsBreachedSLAForSprint)
-                .drillDown(severityJiraDefectDrillDownValueList)
-                .kpiGroup(CommonConstant.OVERALL)
-                .build();
-        severityDataCountMap.get(CommonConstant.OVERALL).add(dataCount);
-        trendValueList.add(dataCount);
-        nodeIdMap.get(sprintDataForKPI195.getSprintNodeId()).setValue(severityDataCountMap);
+            if(defectsBreachedSLAsKPIData.getProjectKPISettingsFieldMapping()
+                    .getIncludedDefectClosureStatusesKPI195()
+                    .stream()
+                    .anyMatch(status -> status.equalsIgnoreCase(lastStatusUpdate.getChangedTo()))
+            ) {
+                Optional<JiraIssue> jiraIssueOptional =
+                        jiraIssuesAfterApplyingAllKPISettingFilters.stream()
+                                .filter(jiraIssue -> jiraIssue.getNumber()
+                                        .equalsIgnoreCase(jiraIssueCustomHistory.getStoryID()))
+                                .findFirst();
+                if(jiraIssueOptional.isPresent()) {
+                    JiraIssue jiraIssue = jiraIssueOptional.get();
+                    JiraDefectIssueDataForKPI195.JiraDefectIssueDataForKPI195Builder jiraDefectIssueDataForKPI195Builder =
+                            JiraDefectIssueDataForKPI195.builder()
+                                    .issueKey(jiraIssueCustomHistory.getStoryID())
+                                    .closedDate(lastStatusUpdate.getUpdatedOn())
+                                    .issueIdsDefectRelatesTo(jiraIssue.getDefectStoryID())
+                                    .timeSpentInHours(String.valueOf(
+                                            Math.floor(jiraIssue.getTimeSpentInMinutes() / 60.0)));
+
+                    LocalDateTime dateTime = LocalDateTime.parse(jiraIssue.getCreatedDate(), FORMATTER);
+                    jiraDefectIssueDataForKPI195Builder.createdDate(dateTime)
+                            .url(jiraIssue.getUrl())
+                            .priority(jiraIssue.getPriority())
+                            .status(jiraIssue.getStatus());
+
+                    String issueSeverity = jiraIssue.getSeverity();
+
+                    SLAData slaData = determineDefectSLABasedOnSeverity(issueSeverity,
+                            defectsBreachedSLAsKPIData.getProjectKPISettingsFieldMapping().getIncludedSeveritySlasKPI195());
+
+                    if(Objects.nonNull(slaData)) {
+                        severitiesFoundAcrossProject.add(slaData.getGeneralSeverity());
+
+                        jiraDefectIssueDataForKPI195Builder.severity(issueSeverity)
+                                .slaData(slaData);
+
+                        Optional<SprintDataForKPI195> sprintDataForKPI195Optional =
+                                defectsBreachedSLAsKPIData.getSprintDataForKPI195List()
+                                        .stream()
+                                        .filter(sprintDataForKPI195 -> sprintDataForKPI195.getSprintId().equals(jiraIssue.getSprintID()))
+                                        .findFirst();
+                        sprintDataForKPI195Optional.ifPresent(sprintDataForKPI195 ->
+                                sprintDataForKPI195.getJiraDefectIssueDataForKPI195List().add(jiraDefectIssueDataForKPI195Builder.build())
+                        );
+                    }
+                }
+            }
+        });
+        defectsBreachedSLAsKPIData.setSeveritiesFoundAcrossSprintIssues(severitiesFoundAcrossProject);
+    }
+
+    private boolean projectDoesNotContainRequiredKPISettings(FieldMapping fieldMapping) {
+        return Objects.isNull(fieldMapping) ||
+                CollectionUtils.isEmpty(fieldMapping.getIncludedDefectClosureStatusesKPI195()) ||
+                CollectionUtils.isEmpty(fieldMapping.getIncludedSeveritySlasKPI195());
     }
 
     private boolean defectBreachedSLA(JiraDefectIssueDataForKPI195 jiraDefectIssueDataForKPI195) {
@@ -541,11 +685,11 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
         long slaInMillis;
 
         if(slaData.getTimeUnit().equalsIgnoreCase("Hours")) {
-            slaInMillis = TimeUnit.HOURS.toMillis(slaData.getSla());
+            slaInMillis = (long) (slaData.getSla() * TimeUnit.HOURS.toMillis(1));
             return durationToCloseTheDefect.toMillis() > slaInMillis;
         }
         if(slaData.getTimeUnit().equalsIgnoreCase("Days")) {
-            slaInMillis = TimeUnit.DAYS.toMillis(slaData.getSla());
+            slaInMillis = (long) (slaData.getSla() * TimeUnit.DAYS.toMillis(1));
             return durationToCloseTheDefect.toMillis() > slaInMillis;
         }
 
@@ -559,8 +703,10 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
         return Duration.between(createdDate, closedDate);
     }
 
-    private SLAData determineDefectSLABasedOnSeverity(String jiraIssueSeverity) {
-        Map<String, List<String>> severitiesMap = customApiConfig.getSeverity();
+    private SLAData determineDefectSLABasedOnSeverity(
+            String jiraIssueSeverity, List<BaseFieldMappingStructure.Options> includedSeveritySlasKPI195
+    ) {
+        Map<String, List<String>> severitiesMap = getCustomApiConfig().getSeverity();
 
         Optional<String> severityOptional =
                 severitiesMap.keySet()
@@ -569,7 +715,64 @@ public class DefectsBreachedSlasServiceImpl extends JiraKPIService<Long, List<Ob
                                 .stream()
                                 .anyMatch(severityMapping -> severityMapping.equalsIgnoreCase(jiraIssueSeverity)))
                         .findFirst();
+        return severityOptional.flatMap(severity -> includedSeveritySlasKPI195.stream()
+                        .filter(severitySlaSetByUser -> {
+                            Object severitySlaStructuredValue = severitySlaSetByUser.getStructuredValue();
+                            if (Objects.nonNull(severitySlaStructuredValue)) {
+                                Map<String, Object> severitySlaStructuredValueMap = (Map<String, Object>) severitySlaStructuredValue;
+                                return ((String) severitySlaStructuredValueMap.get(SEVERITY)).equalsIgnoreCase(severity);
+                            }
+                            return false;
+                        }).map(severitySlaSetByUser -> {
+                            Map<String, Object> severitySlaStructuredValueMap =
+                                    (Map<String, Object>) severitySlaSetByUser.getStructuredValue();
 
-        return severityOptional.map(SEVERITY_SLA_MAP::get).orElse(null);
+                            return new SLAData(((Number) severitySlaStructuredValueMap.get("sla")).doubleValue(),
+                                    (String) severitySlaStructuredValueMap.get(SEVERITY),
+                                    (String) severitySlaStructuredValueMap.get("timeUnit"));
+                        }).findFirst())
+                .orElse(null);
+    }
+
+    private void populateKPIExcelDataByJiraDefectIssueAndBreachedSlaFlag(
+            List<KPIExcelData> kpiExcelDataList,
+            String sprintName,
+            JiraDefectIssueDataForKPI195 jiraDefectIssueDataForKPI195,
+            String breachedSlaFlagString
+    ) {
+        Map<String, String> jiraIssueIdAndUrlDefectRelatesToMap = new HashMap<>();
+        if(StringUtils.isNotEmpty(jiraDefectIssueDataForKPI195.getUrl()) &&
+                CollectionUtils.isNotEmpty(jiraDefectIssueDataForKPI195.getIssueIdsDefectRelatesTo())) {
+            String jiraDefectUrl = jiraDefectIssueDataForKPI195.getUrl();
+            jiraDefectIssueDataForKPI195.getIssueIdsDefectRelatesTo()
+                    .forEach(issueId ->
+                            jiraIssueIdAndUrlDefectRelatesToMap.put(
+                                    issueId,
+                                    String.format("%s%s", jiraDefectUrl.substring(0, jiraDefectUrl.lastIndexOf("/") + 1), issueId)
+                            )
+                    );
+        }
+        KPIExcelData.KPIExcelDataBuilder kpiExcelDataBuilder = KPIExcelData.builder()
+                .sprintName(sprintName)
+                .defectId(Map.of(jiraDefectIssueDataForKPI195.getIssueKey(), jiraDefectIssueDataForKPI195.getUrl()))
+                .storyId(jiraIssueIdAndUrlDefectRelatesToMap)
+                .defectPriority(jiraDefectIssueDataForKPI195.getPriority())
+                .defectSeverity(jiraDefectIssueDataForKPI195.getSeverity())
+                .defectStatus(jiraDefectIssueDataForKPI195.getStatus())
+                .totalTimeSpent(jiraDefectIssueDataForKPI195.getTimeSpentInHours())
+                .defectSLA(String.format("%s %s", jiraDefectIssueDataForKPI195.getSlaData().getSla(),
+                        jiraDefectIssueDataForKPI195.getSlaData().getTimeUnit()))
+                .slaBreached(breachedSlaFlagString);
+
+        Duration resolutionTime = calculateResolutionTimeForDefect(jiraDefectIssueDataForKPI195);
+        long totalSeconds = resolutionTime.getSeconds();
+        long days = (totalSeconds / (24 * 3600));
+        long hours = ((totalSeconds / (24 * 3600)) / 3600);
+        long minutes = ((totalSeconds % 3600) / 60);
+
+        kpiExcelDataBuilder.resolutionTime(
+                String.format("%d days %d hours %d minutes", days, hours, minutes)
+        );
+        kpiExcelDataList.add(kpiExcelDataBuilder.build());
     }
 }
